codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__ctrl_i_copy_no_input_message.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ No input to copy
