codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__ctrl_i_copy_unconfirmed_message.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Copy unconfirmed; /export saves chat
