codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__focus_requested_notification.snap
---
source: tui/src/chatwidget/tests/notifications.rs
expression: notification.display()
---
Click to focus this Codex session
